Make drop down fixed, so it can be inside divs with overflow-y

--- a/src/css/select.less
+++ b/src/css/select.less
@@ -296,6 +296,7 @@
 .ember-select {
   .dropdown-menu {
     // This causes stress
+    position: fixed;
     min-width: 200px;
     max-width: 600px;
     padding: 0;
